# ormpoc

./: .gitignore  README.md  pyproject.toml
src/ormpoc/: main.py
tests/: test_main.py
