[project]
name = "ormpoc"
version = "0.0.1"
description = "Fuck around, find out"
authors = [
    {name = "Klemen Verdnik", email = "klemen.verdnik@gmail.com"},
]
dependencies = [
    "sqlalchemy>=2.0.22",
    "pydantic>=2.4.2",
    "aiosqlite>=0.19.0",
    "greenlet>=3.0.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = [
    "src/ormpoc",
]

[tool.pdm.scripts]
main = "python -m src.ormpoc.main"
